--- a/src/main/resources/templates/profile/change_password.html
+++ b/src/main/resources/templates/profile/change_password.html
@@ -7,20 +7,25 @@
 <body>
 	<div layout:fragment="content" class="container">
 		<div th:replace="fragments/alert :: alert_headline"></div>
+		
 		<form id="changePasswordForm" th:action="@{/profile/changePassword}" th:object="${changePasswordCommand}" action="#" method="post" role="form">
+			<div class="alert alert-danger" th:if="${#fields.hasErrors('global')}" th:errors="*{global}"></div>			
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">										
 					<div class="form-group">
 						<label for="oldPassword" th:text="#{userprofile.changePassword.oldPassword} + ':'"></label> 
 						<input type="password" th:field="*{oldPassword}" class="form-control" />
+						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('oldPassword')}" th:errors="*{oldPassword}">oldPassword error</p>
 					</div>
 					<div class="form-group">
 						<label for="newPassword" th:text="#{userprofile.changePassword.newPassword} + ':'"></label> 
 						<input type="password" th:field="*{newPassword}" class="form-control" />
+						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('newPassword')}" th:errors="*{newPassword}">newPasswordRepeat error</p>
 					</div>
 					<div class="form-group">
 						<label for="newPasswordRepeat" th:text="#{userprofile.changePassword.newPasswordRepeat} + ':'"></label> 
 						<input type="password" th:field="*{newPasswordRepeat}" class="form-control" />
+						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('newPasswordRepeat')}" th:errors="*{newPasswordRepeat}">newPasswordRepeat error</p>
 					</div>
 					<div class="form-group">
 						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
