--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -14,7 +14,7 @@
 					<div class="form-group">
 						<label for="username" th:text="#{user.edit.username} + ':'"></label> 
 						<input type="text" th:field="*{username}" class="form-control" readonly="readonly"/>
-						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">username Error</p>						
+						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">username error</p>						
 					</div>					
 					<div class="form-group">
 						<label for="roles" th:text="#{user.create.roles} + ':'"></label>
@@ -24,17 +24,17 @@
 								<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>
 							</li>
 						</ul>
-						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}">roles Error</p>
+						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('roles')}" th:errors="*{roles}">roles error</p>
 					</div>
 					<div th:if="${@runtimeConfigurationUtil.getConfig().isEnabledParentChildRanking()}" class="form-group">								
 						<input type="checkbox" th:field="*{child}" th:value="${child}"/>
 						<label for="child" th:text="#{user.create.child}"></label>
-						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('child')}" th:errors="*{child}">child Error</p>
+						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('child')}" th:errors="*{child}">child error</p>
 					</div>
 					<div class="form-group" sec:authorize="hasAuthority('PERM_PASSWORD_RESET')">
 						<input type="checkbox" th:field="*{resetPassword}" th:value="true" /> 
 						<label for="resetPassword" th:text="#{user.edit.passwordReset}"></label>
-						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('resetPassword')}" th:errors="*{resetPassword}">resetPassword Error</p> 
+						<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('resetPassword')}" th:errors="*{resetPassword}">resetPassword error</p> 
 					</div>
 					<div class="form-group">
 						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
