--- a/src/main/resources/templates/bet/extra_others.html
+++ b/src/main/resources/templates/bet/extra_others.html
@@ -11,7 +11,7 @@
 				<div class="col-xs-12 col-sm-6 col-md-4" th:each="extraBet : ${allExtraBets}">
 					<div class="panel panel-default panel-extra-bets-others">					
 						<div class="panel-heading">
-							<span th:replace="fragments/profile_image :: profile_image_small_with_popup(${@securityService.getUserProfileImageKeyFor(extraBet.userName)})"></span>
+							<span th:replace="fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(extraBet.userName)})"></span>
 							<span th:text="${extraBet.userName}"></span>	
 					   </div>
 					   <div class="panel-body">
