--- a/src/main/resources/templates/user/create.html
+++ b/src/main/resources/templates/user/create.html
@@ -25,7 +25,7 @@
 							<label for="roles" th:text="#{user.create.roles} + ':'"></label>			
 							<ul class="list-group">
 								<li class="list-group-item" th:each="role : ${createUserCommand.availableRoles}">
-									<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@securityService.isRoleSelectionDisabledForUser(createUserCommand.username)}" />
+									<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@webSecurityUtil.isRoleSelectionDisabledForUser(createUserCommand.username)}" />
 									<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>								
 								</li>							
 							</ul>
