--- a/src/main/resources/templates/user/edit.html
+++ b/src/main/resources/templates/user/edit.html
@@ -19,7 +19,7 @@
 					<div class="form-group">
 						<label for="roles" th:text="#{user.create.roles} + ':'"></label>
 						<ul class="list-group">
-							<li class="list-group-item" th:each="role : ${editUserCommand.availableRoles}">
+							<li class="list-group-item" th:each="role : ${availableRoles}">
 								<input type="hidden" th:field="*{roles}" th:value="${role}" th:if="${@webSecurityUtil.isRoleSelectionDisabledForUser(editUserCommand.username)}"/>
 								<input type="radio" th:field="*{roles}" th:value="${role}" th:disabled="${@webSecurityUtil.isRoleSelectionDisabledForUser(editUserCommand.username)}"/> 
 								<label th:for="${#ids.prev('roles')}" th:text="#{'msg.' + ${role}}"></label>
