--- a/src/main/resources/templates/bet/edit.html
+++ b/src/main/resources/templates/bet/edit.html
@@ -16,6 +16,13 @@
 					<input type="hidden" th:field="*{betId}" class="form-control" />
 					<input type="hidden" th:field="*{matchId}" class="form-control" />					
 					<input type="hidden" th:field="*{redirectViewName}" class="form-control" />
+					<input type="hidden" th:field="*{teamNameOne}" class="form-control" />
+					<input type="hidden" th:field="*{teamNameTwo}" class="form-control" />
+					<input type="hidden" th:field="*{groupMatch}" class="form-control" />
+					<input type="hidden" th:field="*{penaltyWinnerOne}" class="form-control" />
+					<input type="hidden" th:field="*{iconPathTeamOne}" class="form-control" />
+					<input type="hidden" th:field="*{iconPathTeamTwo}" class="form-control" />
+					<input type="hidden" th:field="*{showCountryIcons}" class="form-control" />
 					<div class="form-group">
 						<div class="row center">
 							<div class="col-xs-6">
