--- a/src/main/resources/templates/matches/list.html
+++ b/src/main/resources/templates/matches/list.html
@@ -68,7 +68,7 @@
 												   class="btn btn-success" role="button" th:title="#{matches.list.betMatch}">
 											<span class="fa fa-thumbs-o-up fa-lg"></span>
 										</a>
-										<a sec:authorize="hasAuthority('PERM_EDIT_MATCH_RESULT')" href="#" th:href="@{'/matches/matchresult/' + ${matchCommand.matchId}}" 
+										<a sec:authorize="hasAuthority('PERM_EDIT_MATCH_RESULT')" href="#" th:href="@{'/matchresult/' + ${matchCommand.matchId}}" 
 				            			        class="btn btn-info" role="button" th:title="#{matches.list.enterResult}">
 				            					<span class="fa fa-trophy fa-lg"></span>
 				            			</a>
