refactored extra bets

--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -26,7 +26,7 @@
 				        	</a>
 				        	<ul class="dropdown-menu">
 								<li th:class="${pageState_bet_open}"><a href="#bet" th:href="@{/bet/open}" th:text="#{navigation.betting.open}"></a></li>
-								<li th:class="${pageState_bet_extra_bets}"><a href="#bet" th:href="@{/bet/extra_bets}" th:text="#{navigation.betting.extraBets}"></a></li>
+								<li th:class="${pageState_extra_bets}"><a href="#bet" th:href="@{/extra_bets}" th:text="#{navigation.betting.extraBets}"></a></li>
 							</ul>
 						</li>
 						<li th:class="${pageState_matches_upcoming}"><a href="#matchesUpcoming" th:href="@{/matches/upcoming}" th:text="#{upcoming.matches}"></a></li>
