--- a/src/main/resources/templates/bet/extra_bets.html
+++ b/src/main/resources/templates/bet/extra_bets.html
@@ -8,7 +8,7 @@
 	<div layout:fragment="content" class="container">		
 		<div th:replace="fragments/alert :: alert_headline"></div>
 		
-		<form id="extraBetForm" th:action="@{/bet/extra_bets}" th:object="${extraBetCommand}" action="#" method="post" role="form">
+		<form id="extraBetForm" th:action="@{/extra_bets}" th:object="${extraBetCommand}" action="#" method="post" role="form">
 			<input type="hidden" th:field="*{extraBetId}" class="form-control" />
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
@@ -84,7 +84,7 @@
 			</div>
 			<div class="row" th:if="${!extraBetCommand.isBettable()}">
 				<div class="col-xs-12 col-sm-6 col-md-4">
-					<a href="#" th:href="@{/bet/extra_others}" th:text="#{extrabet.bets.of.others}"></a>
+					<a href="#" th:href="@{/extra_bets/others}" th:text="#{extrabet.bets.of.others}"></a>
 				</div>	
 			</div>
 		</form>
