--- a/src/main/resources/templates/matches/edit.html
+++ b/src/main/resources/templates/matches/edit.html
@@ -9,7 +9,7 @@
 <body>
 	<div layout:fragment="content" class="container">		
 		<div th:replace="fragments/alert :: alert_headline"></div>
-		<form id="matchesForm" th:action="@{/matches}" th:object="${matchCommand}" action="#" method="post" role="form">				
+		<form id="matchesForm" th:action="@{/match}" th:object="${matchCommand}" action="#" method="post" role="form">				
 			<ul>
 	            <li th:each="e : ${#fields.detailedErrors()}" th:class="${e.global}? globalerr : fielderr">
 	                <span th:text="${e.global}? '*' : ${e.fieldName}"></span> |
@@ -67,7 +67,7 @@
 			        </div>					
 					<div class="form-group">
 						<button type="submit" class="btn btn-primary" th:text="#{button.save}"></button>
-						<a sec:authorize="hasAuthority('PERM_DELETE_MATCH')" href="#" th:href="@{'/matches/delete/' + ${matchCommand.matchId}}" 
+						<a sec:authorize="hasAuthority('PERM_DELETE_MATCH')" href="#" th:href="@{'/match/delete/' + ${matchCommand.matchId}}" 
 							class="btn btn-danger" role="button" th:classappend="${!matchCommand.isDeletable()}? 'disabled'" th:text="#{button.delete}"></a>						
 						<a href="#" th:href="@{${'/matches#' + matchCommand.matchId}}" class="btn btn-default" role="button" th:text="#{button.cancel}"></a>	
 					</div>
