--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -24,7 +24,7 @@
 	<body>
 		<nav th:include="_navigation :: menu" class="navbar navbar-inverse navbar-fixed-top"></nav>
 		<div class="container" role="main">		
-			<div layout:fragment="content" class="container" role="main" style="padding-top: 70px;">Content Placeholder</div>
+			<div layout:fragment="content" class="container" role="main">Content Placeholder</div>
 		</div>
 	</body>
 </html>
