update bootstrap to 3.3.7-1

--- a/src/main/resources/templates/_layout.html
+++ b/src/main/resources/templates/_layout.html
@@ -9,8 +9,8 @@
 		<link rel="shortcut icon" th:href="@{/favicon.ico}" />
 		
 		<link rel="stylesheet" th:href="@{/webjars/font-awesome/4.7.0/css/font-awesome.min.css}" />
-		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap.min.css}" />		
-		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.6/css/bootstrap-theme.min.css}" />		
+		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css}" />		
+		<link rel="stylesheet" th:href="@{/webjars/bootstrap/3.3.7-1/css/bootstrap-theme.min.css}" />		
 		<link rel="stylesheet" th:href="@{/lightbox/css/lightbox.min.css}" />
 		<link rel="stylesheet" th:href="@{/css/custom.css}" />
 		<link rel="stylesheet" th:href="@{/css/print.css}" media="print"/>
@@ -18,7 +18,7 @@
 		<script type="text/javascript" th:src="@{/webjars/jquery/2.1.4/jquery.min.js}"></script>
 				
 		<script type="text/javascript" th:src="@{/js/popper-1.11.0.min.js}"></script>		
-		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.6/js/bootstrap.min.js}"></script>		
+		<script type="text/javascript" th:src="@{/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js}"></script>		
 		<script type="text/javascript" th:src="@{/lightbox/js/lightbox.min.js}"></script>		
 	</head>
 	<body>
