--- a/src/main/resources/templates/_navigation.html
+++ b/src/main/resources/templates/_navigation.html
@@ -92,6 +92,7 @@
 					        	<li th:class="${pageState_info_prices}"><a href="#prices" th:href="@{/info/prices}" th:text="#{prices.title}"></a></li>
 					        	<li th:class="${pageState_info_misc}"><a href="#misc" th:href="@{/info/misc}" th:text="#{misc.title}"></a></li>
 					        	<li th:class="${pageState_info_statistic}"><a href="#misc" th:href="@{/info/statistic}" th:text="#{statistics.title}"></a></li>
+					        	<li th:class="${pageState_info_pointsfrequency}"><a href="#misc" th:href="@{/info/pointsfrequency}" th:text="#{pointsfrequency.title}"></a></li>
 					        	<li th:class="${pageState_gallery_show}"><a href="#misc" th:href="@{/gallery/show}" th:text="#{image.gallery.title}"></a></li>
 					        	<li th:class="${pageState_image_show}"><a href="#misc" th:href="@{/image/show}" th:text="#{image.upload.title}"></a></li>
 				        	</ul>
