small ajustments points frequency

--- a/src/main/resources/templates/info/points_freq.html
+++ b/src/main/resources/templates/info/points_freq.html
@@ -12,12 +12,12 @@
 			<br/>
 			<br/>
 			<div class="row">			
-				<div class="col-xs-12 col-sm-6 col-md-4">
+				<div class="col-xs-12 col-sm-6 col-md-4" th:if="${not #lists.isEmpty(fourPointsMap)}">
 					<div class="table-responsive">
 				   		<table class="table">
 				   			<tr class="active">
 				   				<th th:text="#{pointsfrequency.table.header.name}"></th>
-				   				<th><span class="label label-warning label-as-badge">4</span> <span th:text="#{pointsfrequency.points}"></span></th>
+				   				<th><span class="label label-warning label-as-badge big-badge">4</span> <span th:text="#{pointsfrequency.points}"></span></th>
 				   			</tr>
 				   			<tr class="success" th:each="pointCountResult : ${fourPointsMap}">	
 				   				<td th:text="${pointCountResult.username}"></td>
@@ -26,12 +26,12 @@
 				   		</table>
 				   	</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
+				<div class="col-xs-12 col-sm-6 col-md-4" th:if="${not #lists.isEmpty(threePointsMap)}">
 					<div class="table-responsive">
 				   		<table class="table">
 				   			<tr class="active">
 				   				<th th:text="#{pointsfrequency.table.header.name}"></th>
-				   				<th><span class="label label-warning label-as-badge">3</span> <span th:text="#{pointsfrequency.points}"></span></th>
+				   				<th><span class="label label-warning label-as-badge big-badge">3</span> <span th:text="#{pointsfrequency.points}"></span></th>
 				   			</tr>
 				   			<tr class="warning" th:each="pointCountResult : ${threePointsMap}">	
 				   				<td th:text="${pointCountResult.username}"></td>
@@ -40,12 +40,12 @@
 				   		</table>
 				   	</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
+				<div class="col-xs-12 col-sm-6 col-md-4" th:if="${not #lists.isEmpty(twoPointsMap)}">
 					<div class="table-responsive">
 				   		<table class="table">
 				   			<tr class="active">
 				   				<th th:text="#{pointsfrequency.table.header.name}"></th>
-				   				<th><span class="label label-warning label-as-badge">2</span> <span th:text="#{pointsfrequency.points}"></span></th>
+				   				<th><span class="label label-warning label-as-badge big-badge">2</span> <span th:text="#{pointsfrequency.points}"></span></th>
 				   			</tr>
 				   			<tr class="info" th:each="pointCountResult : ${twoPointsMap}">	
 				   				<td th:text="${pointCountResult.username}"></td>
@@ -54,12 +54,12 @@
 				   		</table>
 				   	</div>
 				</div>
-				<div class="col-xs-12 col-sm-6 col-md-4">
+				<div class="col-xs-12 col-sm-6 col-md-4" th:if="${not #lists.isEmpty(onePointsMap)}">
 					<div class="table-responsive">
 				   		<table class="table">
 				   			<tr class="active">
 				   				<th th:text="#{pointsfrequency.table.header.name}"></th>
-				   				<th><span class="label label-warning label-as-badge">1</span> <span th:text="#{pointsfrequency.points}"></span></th>
+				   				<th><span class="label label-warning label-as-badge big-badge">1</span> <span th:text="#{pointsfrequency.points}"></span></th>
 				   			</tr>
 				   			<tr class="danger" th:each="pointCountResult : ${onePointsMap}">	
 				   				<td th:text="${pointCountResult.username}"></td>
