--- a/src/main/resources/templates/admin/active_users.html
+++ b/src/main/resources/templates/admin/active_users.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorate="_layout">
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorate="~{_layout}">
 <head>
 	<title th:text="#{active.users.title}"></title>
 </head>
 <body>
 	<div layout:fragment="content">
-		<div th:replace="fragments/alert :: alert_headline"></div>
+		<div th:replace="~{fragments/alert :: alert_headline}"></div>
 		<h1 th:text="#{active.users.title}"></h1>
 		<div class="col-xs-12 col-sm-6 col-md-4">			
 			<div class="row" th:each="sessionTracking : ${userList}">
