--- a/src/main/resources/templates/admin/backup.html
+++ b/src/main/resources/templates/admin/backup.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div layout:fragment="content">
-			<div th:replace="fragments/alert :: alert_headline"></div>
+			<div th:replace="~{fragments/alert :: alert_headline}"></div>
 			
 			<h1 th:text="#{administration.backup.title}"></h1>						
 			<div class="row">			
