--- a/src/main/resources/templates/admin/lastlogins.html
+++ b/src/main/resources/templates/admin/lastlogins.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div layout:fragment="content">
-			<div th:replace="fragments/alert :: alert_headline"></div>
+			<div th:replace="~{fragments/alert :: alert_headline}"></div>
 			<h1 th:text="#{lastlogins.title}"></h1>
 			<div class="col-xs-12 col-sm-6 col-md-4">			
 				<div class="row" th:each="appUser : ${userList}">
