--- a/src/main/resources/templates/image/gallery.html
+++ b/src/main/resources/templates/image/gallery.html
@@ -1,4 +1,4 @@
-ï»¿<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/web/thymeleaf/layout"
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3" layout:decorate="_layout">
 	<head>
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div layout:fragment="content" class="container">
-			<div th:replace="fragments/alert :: alert_headline"></div>
+			<div th:replace="~{fragments/alert :: alert_headline}"></div>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
 					<div id="links" class="gallery-images">
@@ -25,9 +25,9 @@
 					<div id="blueimp-gallery" class="blueimp-gallery blueimp-gallery-controls">
 					    <div class="slides"></div>
 					    <h3 class="title"></h3>
-					    <a class="prev">â€¹</a>
-					    <a class="next">â€º</a>
-					    <a class="close">Ã—</a>
+					    <a class="prev">‹</a>
+					    <a class="next">›</a>
+					    <a class="close">×</a>
 					    <a class="play-pause"></a>
 					    <ol class="indicator"></ol>
 					</div>					
