--- a/src/main/resources/templates/info/points_freq.html
+++ b/src/main/resources/templates/info/points_freq.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div layout:fragment="content" class="container">
-			<div th:replace="fragments/alert :: alert_headline"></div>
+			<div th:replace="~{fragments/alert :: alert_headline}"></div>
 			<h1 th:text="#{pointsfrequency.title}"></h1>
 			<span class="label label-info" th:text="#{pointsfrequency.title2}"></span>
 			<br/>
