--- a/src/main/resources/templates/matches/edit.html
+++ b/src/main/resources/templates/matches/edit.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div layout:fragment="content" class="container">		
-		<div th:replace="fragments/alert :: alert_headline"></div>
+		<div th:replace="~{fragments/alert :: alert_headline}"></div>
 		<form id="matchesForm" th:action="@{/match}" th:object="${createEditMatchCommand}" action="#" method="post" role="form">
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4">
