--- a/src/main/resources/templates/profile/change_password.html
+++ b/src/main/resources/templates/profile/change_password.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<div layout:fragment="content" class="container">
-		<div th:replace="fragments/alert :: alert_headline"></div>
+		<div th:replace="~{fragments/alert :: alert_headline}"></div>
 		
 		<form id="changePasswordForm" th:action="@{/profile/changePassword}" th:object="${changePasswordCommand}" action="#" method="post" role="form">
 			<div class="alert alert-danger" th:if="${#fields.hasErrors('global')}" th:errors="*{global}"></div>			
