--- a/src/main/resources/templates/ranking/list.html
+++ b/src/main/resources/templates/ranking/list.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div layout:fragment="content">
-			<div th:replace="fragments/alert :: alert_headline"></div>
+			<div th:replace="~{fragments/alert :: alert_headline}"></div>
 			<div class="row">
 				<div class="col-xs-6">
 					<h1 th:text="#{ranking.list.title}"></h1>
@@ -27,7 +27,7 @@
 								<span class="label ranking" th:classappend="${ranking.cssRankClass}" th:text="'# ' + ${status.count}"></span>
 							</div>
 							<div class="col-xs-1 no-left-padding">
-								<span th:replace="fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(ranking.userName)})"></span>
+								<span th:replace="~{fragments/profile_image :: profile_image_small_with_popup(${@webSecurityUtil.getUserProfileImageKeyFor(ranking.userName)})}"></span>
 							</div>
 							<div class="col-xs-6 no-left-padding">
 								<span class="ranking-name" th:text="${ranking.userName}"></span>
