--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div layout:fragment="content">
-			<div th:replace="fragments/alert :: alert_headline"></div>
+			<div th:replace="~{fragments/alert :: alert_headline}"></div>
 			<h1 th:text="#{user.list.title} + ' (' + ${allUsers.size()} + ')'"></h1>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-4" th:each="userDto : ${allUsers}">
@@ -14,7 +14,7 @@
 						<div class="panel-body user-panel-body">
 							<div class="row">
 								<div class="col-xs-7 user-label">
-									<span th:replace="fragments/profile_image :: profile_image_big_with_popup(${userDto.userProfileImageKey})"></span>									
+									<span th:replace="~{fragments/profile_image :: profile_image_big_with_popup(${userDto.userProfileImageKey})}"></span>									
 									<span th:text="${userDto.username}"></span>							  		
 					  			</div>
 					  			<div class="col-xs-5">
