--- a/src/main/resources/templates/bet/extra_others.html
+++ b/src/main/resources/templates/bet/extra_others.html
@@ -31,7 +31,7 @@
 						   			</tr>
 						   			<tr>
 						   				<th th:text="#{bet.list.points}"></th>
-						   				<td class="danger" th:text="${extraBet.points}"></td>
+						   				<td th:text="${extraBet.points}"></td>
 						   			</tr>
 						   		</table>
 					   	   </div>
