--- a/src/main/resources/templates/info/statistic.html
+++ b/src/main/resources/templates/info/statistic.html
@@ -45,15 +45,15 @@
 						   				<th>3.</th>
 						   			</tr>
 						   			<tr>
-						   				<td class="info">
+						   				<td class="success">
 						   					<span th:text="${statistic.pointsGroup}"></span>
 						   					<span th:if="${statistic.maxGroupPointsCandidate}" class="fa fa-star blue" aria-hidden="true"></span>
 						   				</td>
-						   				<td class="success" th:text="${statistic.pointsRoundOfSixteen}"></td>
-						   				<td class="success" th:text="${statistic.pointsQuarterFinal}"></td>
-						   				<td class="success" th:text="${statistic.pointsSemiFinal}"></td>
-						   				<td class="success" th:text="${statistic.pointsFinal}"></td>
-						   				<td class="warning" th:text="${statistic.pointsGameForThird}"></td>
+						   				<td class="warning" th:text="${statistic.pointsRoundOfSixteen}"></td>
+						   				<td class="warning" th:text="${statistic.pointsQuarterFinal}"></td>
+						   				<td class="warning" th:text="${statistic.pointsSemiFinal}"></td>
+						   				<td class="warning" th:text="${statistic.pointsFinal}"></td>
+						   				<td class="info" th:text="${statistic.pointsGameForThird}"></td>
 						   			</tr>
 						   		</table>
 					   	   </div>
