--- a/src/main/resources/templates/info/statistic.html
+++ b/src/main/resources/templates/info/statistic.html
@@ -9,9 +9,12 @@
 			<div th:replace="~{fragments/alert :: alert_headline}"></div>
 			<h1 th:text="#{statistics.title}"></h1>
 			<div class="row" th:if="${not #lists.isEmpty(statisticList)}">
-				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">					
+				<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">					
 					<img class="flag" th:src="@{${favouriteCountry.getIconPath()}}"/> <span th:text="#{statistics.legend.favouriteCountry}"></span>,
 					<span class="fa fa-magic" aria-hidden="true"></span> <span th:text="#{statistics.legend.bonusPoints}"></span>,
+					
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-8 col-lg-9">
 					<span class="fa fa-star blue" aria-hidden="true"></span> <span th:text="#{statistics.legend.topBetter}"></span>,
 					<span class="glyphicon glyphicon-lamp red" aria-hidden="true"></span> <span th:text="#{statistics.legend.flopBetter}"></span>
 				</div>
