--- a/src/main/resources/templates/admin/runtime_config.html
+++ b/src/main/resources/templates/admin/runtime_config.html
@@ -10,7 +10,7 @@
 			<div th:replace="~{fragments/alert :: alert_headline}"></div>
 			
 			<h2 th:text="#{administration.runtime.configuration}"></h2>
-			<form id="saveRuntimeConfigForm" th:action="@{/runtimeconfig/saveRuntimeConfig}" th:object="${configurationCommand}" action="#" method="post" role="form">
+			<form id="saveRuntimeConfigForm" th:action="@{/runtimeconfig/saveRuntimeConfig}" th:object="${runtimeConfigCommand}" action="#" method="post" role="form">
 				<div class="row">			
 					<div class="col-xs-12 col-sm-6 col-md-4">					
 						<ul class="list-group">
@@ -56,12 +56,12 @@
 						<div class="form-group">
 							<label for="currentTime" th:text="#{administration.runtime.configuration.currentTime} + ':'"></label>
 							<br/> 
-							<span th:text="${configurationCommand.currentTime}"></span>						
+							<span th:text="${runtimeConfigCommand.currentTime}"></span>						
 						</div>
 						<div class="form-group">
 							<label for="timeZone" th:text="#{administration.runtime.configuration.timeZone}"></label> 
 							<select th:field="*{timeZone}" class="form-control">
-							  <option th:each="timeZone : ${configurationCommand.timeZoneIds}" th:text="${timeZone}" th:value="${timeZone}"></option>
+							  <option th:each="timeZone : ${runtimeConfigCommand.timeZoneIds}" th:text="${timeZone}" th:value="${timeZone}"></option>
 							</select>
 							<p class="alert alert-danger field-alert" th:if="${#fields.hasErrors('timeZone')}" th:errors="*{timeZone}">timeZone Error</p>						
 						</div>					
